fixing size of img at projects page: too small

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -132,7 +132,7 @@ img.avatar-2 {
   text-align: center;
   font-weight: bold;
   max-width: 300px;
-  padding: 15% 10% 60%;
+  padding: 10% 10% 60%;
   margin: 0 auto 20px;
   color: #999999;
   border: 1px solid #e5e5e5;
